--- a/tailwind/test.html
+++ b/tailwind/test.html
@@ -21,7 +21,8 @@
 </style>
 
 <body>
-
+    <div>a</div>
+    <div>bgit </div>
     <p>
         <button onclick="myMove()">Click Me</button>
     </p>
