--- a/tailwind/test.html
+++ b/tailwind/test.html
@@ -23,6 +23,7 @@
 <body>
     <div>a</div>
     <div>bgit </div>
+    <div>gdakgit pus</div>
     <p>
         <button onclick="myMove()">Click Me</button>
     </p>
