up desk_8 and desk_10

--- a/tailwind/desktop_10.html
+++ b/tailwind/desktop_10.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="h-screen g-b">
-    <header class="bg-1f2937 semibold">
+    <header class="bg-111827 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
             <div class="w-7/12 flex">
                 <img src="/images/Vector 1.png" alt="">
@@ -25,8 +25,8 @@
                     <li class="w-3/12 fz-16"><a href="#">Home Page</a></li>
                     <li class="w-3/12 fz-16"><a href="#">Game</a></li>
                     <li class="w-3/12 fz-16"><a href="#">Affiliate</a></li>
-                    <li class="w-3/12 fz-16">
-                        <select name="" id="" class="bg-1f2937">
+                    <li class="w-3/12 fz-16 ml-4">
+                        <select name="" id="" class="bg-1f2937 rounded-lg px-2">
                             <option value="1">10.0000121 <span>BTC</span></option>
                             <option value="2">0.0000121 <span>ETH</span></option>
                             <option value="3">1.32200121 <span>USD</span></option>
@@ -47,7 +47,8 @@
                                 class="fz-14 regular text-white">0.0000121</span>
                             BTC</div>
                     </div>
-                    <div class="bg-1f2937 rounded-lg py-12">
+                    <div 1 class="bg-1f2937 rounded-lg py-12">
+                        <!-- game_class-roll -->
                         <div class="flex w-4/5 m-ct list-none">
                             <div class="flex w-4/5">
                                 <li><a href="#">Recent Crash</a></li>
@@ -116,7 +117,7 @@
                                 <div class="w-2/4">
                                     <p class="ml-4">Win Chance</p>
                                     <div class="rounded-lg bg_374151 py-4 ml-4 semibold fz-16 text-center" id="no">
-                                        <span>.00%</span>
+                                        100<span>.00%</span>
                                         <span class="rounded-lg bg-D1D5DB py-2 px-2">min</span>
                                         <span class="rounded-lg bg-D1D5DB py-2 px-2">-5%</span>
                                         <span class="rounded-lg bg-D1D5DB py-2 px-2">+5%</span>
