--- a/tailwind/desktop_8.html
+++ b/tailwind/desktop_8.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="h-screen g-b">
-    <header class="bg-1f2937 semibold">
+    <header class="bg-111827 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
             <div class="w-7/12 flex">
                 <img src="/images/Vector 1.png" alt="">
@@ -107,7 +107,12 @@
                                 <div class="rounded-lg bg_374151 py-6 pl-12 ml-4 semibold"> 0.0000121 BTC</div>
                             </div>
                         </div>
-                        <div class="rounded-lg bg_EAB308 py-6 text-center w-2/5 m-ct mt-12 fz-26 semibold">BET</div>
+                        <div class="w-full py-32">
+                            <div class="w-74-26-pt">
+                                <button class="rounded-lg bg_EAB308 py-6  w-3/5 float-right fz-26 semibold">BET</button>
+                            </div>
+                            <div class="w-25-739-pt"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="w-30-px"></div>
@@ -115,10 +120,11 @@
                     <div class="bg-1f2937 rounded-lg">
                         <div class="flex w-4/5 m-ct py-6">
                             <div class="fz-18 semibold w-3/4">Chatbox</div>
-                            <div class="fz-18 bold w-1/4 text-right">1.5475</div>
+                            <div class="flex fz-18 bold w-1/4 text-right"><img class="pr-4" src="/images/user-group.png"
+                                    alt=""> 1.5475</div>
                         </div>
                         <div class="w-4/5 m-ct bg-gray-500 h-0.5 my-4"></div>
-                        <div class="flex py-8 fz-14 regular">
+                        <div class="flex py-8 fz-14 regular w-11/12 m-ct">
                             <div class="w-3/12">
                                 <div class="rounded-full bg-gray-500 w-12 h-12 m-ct-bl"></div>
                             </div>
@@ -130,7 +136,7 @@
                                 <p class="pl-4">Looks like today is not Lucky Enough Guys</p>
                             </div>
                         </div>
-                        <div class="flex py-8 fz-14 regular">
+                        <div class="flex py-8 fz-14 regular w-11/12 m-ct">
                             <div class="w-3/12">
                                 <div class="rounded-full bg-gray-500 w-12 h-12 m-ct-bl"></div>
                             </div>
@@ -142,7 +148,7 @@
                                 <p class="pl-4">Looks like today is not Lucky Enough Guys</p>
                             </div>
                         </div>
-                        <div class="flex py-8 fz-14 regular">
+                        <div class="flex py-8 fz-14 regular w-11/12 m-ct">
                             <div class="w-3/12">
                                 <div class="rounded-full bg-gray-500 w-12 h-12 m-ct-bl"></div>
                             </div>
@@ -154,7 +160,7 @@
                                 <p class="pl-4">Looks like today is not Lucky Enough Guys</p>
                             </div>
                         </div>
-                        <div class="flex py-8 fz-14 regular">
+                        <div class="flex py-8 fz-14 regular w-11/12 m-ct">
                             <div class="w-3/12">
                                 <div class="rounded-full bg-gray-500 w-12 h-12 m-ct-bl"></div>
                             </div>
@@ -166,7 +172,7 @@
                                 <p class="pl-4">Looks like today is not Lucky Enough Guys</p>
                             </div>
                         </div>
-                        <div class="flex py-8 fz-14 regular">
+                        <div class="flex py-8 fz-14 regular w-11/12 m-ct">
                             <div class="w-3/12">
                                 <div class="rounded-full bg-gray-500 w-12 h-12 m-ct-bl"></div>
                             </div>
@@ -178,7 +184,7 @@
                                 <p class="pl-4">Looks like today is not Lucky Enough Guys</p>
                             </div>
                         </div>
-                        <div class="flex">
+                        <div class="flex w-11/12 m-ct">
                             <div class="w-3/12">
                             </div>
                             <div class="w-9/12">
