--- a/tailwind/desktop_10.html
+++ b/tailwind/desktop_10.html
@@ -237,63 +237,63 @@
             </li>
         </div>
         <table class="text-white w-4/5 m-ct fz-20">
-            <tr class="text-left fz-26 border-b medium">
+            <tr class="text-left fz-26 medium">
                 <th class="w-16-9-pt">Game</th>
                 <th class="w-33-9-pt">Player</th>
                 <th class="w-33-9-pt">Waggered</th>
                 <th class="w-16-9-pt pl-28">Profit</th>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>outsider1997</td>
                 <td>145785123478154</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Free Roll</td>
                 <td>mannothotbigshaq</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
