--- a/tailwind/desktop_3.html
+++ b/tailwind/desktop_3.html
@@ -9,7 +9,7 @@
     <link rel=icon type=image/png href="../images/Vector 1.png">
     <link rel="stylesheet" href="./tailwind.css">
     <link rel="stylesheet" href="../tailwind/custom.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
+    <script src="/js/Chart.min.js"></script>
 </head>
 
 <body class="h-screen g-b">
@@ -102,10 +102,14 @@
                 <p class="text-white">Every friend you invite to your MY CASINO will get you 100 USD. Your MY CASINO
                     members will get you
                     the corresponding USD rewards when they upgrade yo the higher VIP Level</p>
-                <canvas id="myChart" width="1000" height="500"></canvas>
-                <canvas id="myCanvas"></canvas>
+                    <div class="w-4/5 m-ct">
+                        <canvas id="income" class="m-ct-bl" width="1200" height="600"></canvas>
+                    </div>
             </div>
         </section>
+        <div class="w-4/5 m-ct">
+            <canvas id="countries" class="m-ct-bl" width="600" height="400"></canvas>
+        </div>
         <section class="bg-1f2937">
             <h3 class="semibold fz-50 text-center text-white">Platform Real-Time Rewards</h3>
             <table class="text-white w-4/5 m-ct fz-20">
@@ -212,178 +216,54 @@
         </section>
     </main>
     <script>
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange', 'Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange', 'Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange', 'Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                datasets: [{
-                    label: 'USD',
-                    data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
-                    backgroundColor: [
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E',
-                        '#22C55E'
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                }
-            }
-        });
-    </script>
-    <script>
-        var Piechart = function (options) {
-
-            this.options = options;
-
-            this.canvas = options.canvas;
-
-            this.ctx = this.canvas.getContext("2d");
-
-            this.colors = options.colors;
-
-
-
-            this.draw = function () {
-
-                var total_value = 0;
-
-                var color_index = 0;
-
-                for (var categ in this.options.data) {
-
-                    var val = this.options.data[categ];
-
-                    total_value += val;
-
-                }
-
-
-
-                var start_angle = 0;
-
-                for (categ in this.options.data) {
-
-                    val = this.options.data[categ];
-
-                    var slice_angle = 2 * Math.PI * val / total_value;
-
-
-
-                    drawPieSlice(
-
-                        this.ctx,
-
-                        this.canvas.width / 2,
-
-                        this.canvas.height / 2,
-
-                        Math.min(this.canvas.width / 2, this.canvas.height / 2),
-
-                        start_angle,
-
-                        start_angle + slice_angle,
-
-                        this.colors[color_index % this.colors.length]
-
-                    );
-
-
-
-                    start_angle += slice_angle;
-
-                    color_index++;
-
-                }
-
-
-
-                //drawing a white circle over the chart
-
-                //to create the doughnut chart
-
-                if (this.options.doughnutHoleSize) {
-
-                    drawPieSlice(
-
-                        this.ctx,
-
-                        this.canvas.width / 2,
-
-                        this.canvas.height / 2,
-
-                        this.options.doughnutHoleSize * Math.min(this.canvas.width / 2, this.canvas.height / 2),
-
-                        0,
-
-                        2 * Math.PI,
-
-                        "#ff0000"
-
-                    );
-
-                }
-
-
-
-            }
-
-        }
-        var myDougnutChart = new Piechart(
-
+        // pie chart data
+        var pieData = [
             {
-
-                canvas: myCanvas,
-
-                data: myVinyls,
-
-                colors: ["#fde23e", "#f16e23", "#57d9ff", "#937e88"],
-
-                doughnutHoleSize: 0.5
-
+                value: 20,
+                color: "#878BB6"
+            },
+            {
+                value: 40,
+                color: "#4ACAB4"
+            },
+            {
+                value: 10,
+                color: "#FF8153"
+            },
+            {
+                value: 30,
+                color: "#FFEA88"
             }
+        ];
 
-        );
+        // pie chart options
+        var pieOptions = {
+            segmentShowStroke: false,
+            animateScale: true
+        }
 
-        myDougnutChart.draw();
+        // get pie chart canvas
+        var countries = document.getElementById("countries").getContext("2d");
+
+        // draw pie chart
+        new Chart(countries).Doughnut(pieData, pieOptions);
     </script>
+     <script>var barData = {
+        labels: ["January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June"],
+        datasets: [
+            {
+                fillColor: "#22C55E",
+                strokeColor: "#22C55E",
+                data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
+            }
+        ]
+    }
+
+    // get bar chart canvas
+    var income = document.getElementById("income").getContext("2d");
+
+    // draw bar chart
+    new Chart(income).Bar(barData);</script>
 </body>
 
 </html>
