--- a/tailwind/test_2.html
+++ b/tailwind/test_2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/Chart.min.js"></script>
+    <script src="/js/Chart.min.js"></script>
 </head>
 
 <body>
@@ -112,12 +112,12 @@
         new Chart(buyers).Line(buyerData);
     </script>
     <script>var barData = {
-            labels: ["January", "February", "March", "April", "May", "June"],
+            labels: ["January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June"],
             datasets: [
                 {
-                    fillColor: "#48A497",
-                    strokeColor: "#48A4D1",
-                    data: [456, 479, 324, 569, 702, 600]
+                    fillColor: "#22C55E",
+                    strokeColor: "#22C55E",
+                    data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
                 }
             ]
         }
