--- a/tailwind/desktop_3.html
+++ b/tailwind/desktop_3.html
@@ -108,7 +108,7 @@
             </div>
         </section>
         <div class="w-4/5 m-ct">
-            <canvas id="countries" class="m-ct-bl" width="600" height="400"></canvas>
+            <canvas id="countries" class="m-ct-bl w-full" width="600" height="400"></canvas>
         </div>
         <section class="bg-1f2937">
             <h3 class="semibold fz-50 text-center text-white">Platform Real-Time Rewards</h3>
