--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="w-4/5 m-ct flex">
+        <div class="w-4/5 m-ct flex pb-24">
             <div class="w-25-5-pt"></div>
             <div class="w-16-9-pt h-12 "></div>
             <div class="w-57-pt text-white">
@@ -108,7 +108,6 @@
             <div class="w-2/4"></div>
         </div>
         <div class="w-4/5 m-ct text-center relative" style="top: 200px;">
-
             <div>
                 <img src="/images/Rectangle 23.png" alt="">
                 <div class="overlay text-right">
@@ -166,7 +165,7 @@
     <section class="bg-1f2937 pt-72 pb-12">
         <div class="w-4/5 m-ct text-white fz-40 semibold">ALL Bets</div>
         <table class="text-white w-4/5 m-ct fz-20 mt-12 ">
-            <tr class="text-left fz-26 border-b medium">
+            <tr class="text-left fz-26 border-b border-gray-700 medium">
                 <th class="w-16-9-pt">Game</th>
                 <th class="w-16-9-pt">User</th>
                 <th class="w-16-9-pt">Bet ID</th>
@@ -174,7 +173,7 @@
                 <th class="w-16-9-pt">Payout</th>
                 <th class="w-16-9-pt pl-28">Profit</th>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>outsider1997</td>
                 <td>145785123478154</td>
@@ -182,7 +181,7 @@
                 <td>2.00000000</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -190,7 +189,7 @@
                 <td>2.00000000</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Free Roll</td>
                 <td>mannothotbigshaq</td>
                 <td>789465157121236</td>
@@ -199,7 +198,7 @@
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -207,7 +206,7 @@
                 <td>2.00000000</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b-2 regular">
+            <tr class="border-b-2 border-gray-700 regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -215,7 +214,7 @@
                 <td>2.00000000</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -224,7 +223,7 @@
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 border-gray-700 regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -232,7 +231,7 @@
                 <td>2.00000000</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -240,7 +239,7 @@
                 <td>2.00000000</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
@@ -251,7 +250,20 @@
             </tr>
         </table>
     </section>
-    <section class="bg-111827 m-ct h-72"></section>
+    <section class="bg-black relative">
+        <div>
+            <div class="h-screen"></div>
+            <div class="overlay">
+                <div class="w-3/5 py-32">
+                    <h2 class="text-white fz-72 semibold">Contest</h2>
+                    <p class="text-white fz-18 my-4 regular">Who is the invincible victor at the high tables?
+                        Let's see how badass you can be.</p>
+                        <div class="bg_676CDB w-1/5 border-b-4"></div>
+                    <button class="bg_3B82F6 rounded-lg w-3/12 py-4 my-6 fz-18  semibold">Participate Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="w-full bg-1f2937 py-12">
         <div class="flex text-white w-4/5 m-ct list-none semibold">
             <li class="pr-10 cl-bt"><a href="#">Daily</a></li>
@@ -262,63 +274,63 @@
             </li>
         </div>
         <table class="text-white w-4/5 m-ct fz-20">
-            <tr class="text-left fz-26 border-b medium">
+            <tr class="text-left fz-26 border-b border-gray-700 medium">
                 <th class="w-16-9-pt">Game</th>
                 <th class="w-33-9-pt">Player</th>
                 <th class="w-33-9-pt">Waggered</th>
                 <th class="w-16-9-pt pl-28">Profit</th>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>outsider1997</td>
                 <td>145785123478154</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Free Roll</td>
                 <td>mannothotbigshaq</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="border-b border-gray-700 regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
