--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -252,9 +252,9 @@
     </section>
     <section class="bg-black relative">
         <div>
-            <div class="h-screen"></div>
+            <div class="h-96"></div>
             <div class="overlay">
-                <div class="w-3/5 py-32">
+                <div class="w-4/5 m-ct py-12">
                     <h2 class="text-white fz-72 semibold">Contest</h2>
                     <p class="text-white fz-18 my-4 regular">Who is the invincible victor at the high tables?
                         Let's see how badass you can be.</p>
