--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -341,7 +341,7 @@
     </section>
     <section class="bg-111827">
         <div class="flex w-4/5 m-ct py-32">
-            <div class="w-67-9-pt text-white medium">
+            <div class="w-67-9-pt text-white medium pr-12">
                 <h2 class="fz-60 bold">Connect With Us</h2>
                 <div class="bg_676CDB w-1/4 border-b-4"></div>
                 <p class="fz-16 py-6">This game believes that technology creates the future.
