--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -356,7 +356,7 @@
                 </div>
             </div>
             <div class="w-32-03-pt flex text-white medium">
-                <div class="w-53-04-pt list-none">
+                <div class="w-53-04-pt list-none leading-10">
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Help Center</a></li>
                     <li><a href="#">Privacy Policy</a></li>
@@ -365,8 +365,8 @@
                     <li><a href="#">Gamble Aware</a></li>
                 </div>
                 <div class="w-46-95-pt list-none">
-                    <li><a href="#">btcgame@gmail.com</a></li>
-                    <li><a href="#">help.btcgame.com</a></li>
+                    <li><a href="#" class="flex my-3"><img src="/images/mail.png" alt=""><span>btcgame@gmail.com</span></a></li>
+                    <li><a href="#" class="flex"><img src="/images/information-circle.png" alt=""><span>help.btcgame.com</span></a></li>
                 </div>
             </div>
         </div>
