--- a/tailwind/desktop_3.html
+++ b/tailwind/desktop_3.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="h-screen g-b">
-    <header class="bg-1f2937 semibold">
+    <header class="bg-111827 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
             <div class="w-8/12 flex">
                 <img src="/images/Vector 1.png" alt="">
@@ -51,7 +51,7 @@
         </div>
     </header>
     <main>
-        <section class="bg-111827">
+        <section class="bg-1f2937">
             <div class="flex w-4/5 m-ct text-white text-right py-32">
                 <div class="w-2/4"></div>
                 <div class="w-2/4">
@@ -82,7 +82,7 @@
                 <button class="m-ct-bl fz-20 rounded-full bg_3B82F6 w-2/4 py-4">Create My Casino Now</button>
             </div>
         </section>
-        <section class="bg-1f2937">
+        <section class="bg-111827">
             <div class="w-4/5 m-ct py-32">
                 <h3 class="text-white fz-70">My Casino Rewards System</h3>
                 <div class="flex">
@@ -96,42 +96,52 @@
                 </div>
             </div>
         </section>
-        <section class="bg-111827">
+        <section class="bg-1f2937">
             <div class="w-4/5 m-ct">
                 <h3 class="text-white">USD Rewards</h3>
                 <p class="text-white">Every friend you invite to your MY CASINO will get you 100 USD. Your MY CASINO
                     members will get you
                     the corresponding USD rewards when they upgrade yo the higher VIP Level</p>
-                    <div class="w-4/5 m-ct">
+                    <div class="w-4/5 m-ct py-12">
                         <canvas id="income" class="m-ct-bl" width="1200" height="600"></canvas>
                     </div>
             </div>
         </section>
-        <div class="w-4/5 m-ct">
-            <canvas id="countries" class="m-ct-bl w-full" width="600" height="400"></canvas>
-        </div>
-        <section class="bg-1f2937">
-            <h3 class="semibold fz-50 text-center text-white">Platform Real-Time Rewards</h3>
-            <table class="text-white w-4/5 m-ct fz-20">
-                <tr class="text-left fz-26 border-b medium">
+        <section class="bg-111827 py-24">
+            <div class="text-white ">
+                <h2 class="text-center semibold fz-50">Commission Rewards</h2>
+                <p class="text-center w-2/5 m-ct">Every friend you invite to your MY CASINO will rebate you a percentage of their wagers as your commission, directly sent to your balance.
+                </p>
+                <p class="text-center w-2/5 m-ct">Your MY CASINO members will rebate you a percentage of their wagers as your commission rewards. Please see blow:</p>
+            </div>
+            <div class="w-4/5 m-ct py-12">
+                <canvas id="countries" class="m-ct-bl w-full h_h" width="600" height="400">
+                </canvas>
+            </div>
+        </section>
+        
+        <section class="bg-1f2937 pb-12">
+            <h3 class="semibold fz-50 text-center text-white py-48">Platform Real-Time Rewards</h3>
+            <table class="text-white w-4/5 m-ct fz-20 ">
+                <tr class="text-left fz-26 border-b border-gray-700 medium">
                     <th class="w-16-9-pt">Game</th>
                     <th class="w-33-9-pt">Player</th>
                     <th class="w-33-9-pt">Waggered</th>
                     <th class="w-16-9-pt pl-28">Profit</th>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Crash</td>
                     <td>outsider1997</td>
                     <td>145785123478154</td>
                     <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Classic Dice</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
                     <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Free Roll</td>
                     <td>mannothotbigshaq</td>
                     <td>789465157121236</td>
@@ -139,19 +149,19 @@
                             alt="">2.00000000
                     </td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Crash</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
                     <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Free Roll</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
                     <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Crash</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
@@ -159,19 +169,19 @@
                             alt="">2.00000000
                     </td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Classic Dice</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
                     <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Free Roll</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
                     <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
                 </tr>
-                <tr class="border-b regular">
+                <tr class="border-b border-gray-700 regular">
                     <td>Crash</td>
                     <td>CrISABELLA44784ash</td>
                     <td>789465157121236</td>
@@ -249,7 +259,7 @@
         new Chart(countries).Doughnut(pieData, pieOptions);
     </script>
      <script>var barData = {
-        labels: ["January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June","January", "February", "March", "April", "May", "June"],
+        labels: ["1", "2", "3", "4", "5", "6","7", "8", "9", "10", "11", "12","13", "14", "15", "16", "17", "18","19", "20", "21", "22", "23", "24"],
         datasets: [
             {
                 fillColor: "#22C55E",
