--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../tailwind/custom.css">
 </head>
 
-<body class="h-screen g-b">
+<body class="h-screen">
     <header class="bg-1f2937 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
             <div class="w-8/12 flex">
