--- a/tailwind/desktop_3.html
+++ b/tailwind/desktop_3.html
@@ -63,10 +63,10 @@
                 </div>
             </div>
             <div class="flex w-4/5 m-ct bg-1f2937">
-                <div class="w-8-49-pt">
+                <div class="w-8-49-pt bg-gray-700">
                     <div class="w-4 h-full bg_3B82F6"></div>
                 </div>
-                <div class="w-57-51-pt">
+                <div class="w-57-51-pt bg-gray-700">
                     <h3 class="text-white w-3/5 fz-46 pt-12">Build A Casino Website
                         With Your Own Domain</h3>
                     <p class="text-white fz-18 pb-12">It's hard to build a casino, but you can start from managing your
@@ -98,8 +98,8 @@
         </section>
         <section class="bg-1f2937">
             <div class="w-4/5 m-ct">
-                <h3 class="text-white">USD Rewards</h3>
-                <p class="text-white">Every friend you invite to your MY CASINO will get you 100 USD. Your MY CASINO
+                <h3 class="text-white fz-40 semibold pt-24">USD Rewards</h3>
+                <p class="text-white fz-20 regular w-7/12">Every friend you invite to your MY CASINO will get you 100 USD. Your MY CASINO
                     members will get you
                     the corresponding USD rewards when they upgrade yo the higher VIP Level</p>
                     <div class="w-4/5 m-ct py-12">
