--- a/tailwind/desktop_5.html
+++ b/tailwind/desktop_5.html
@@ -50,7 +50,7 @@
             win up to $200 in free bitcoins!</p>
         <div class="flex w-4/5 m-ct text-white pt-12 relative semibold" style="top: 250px;">
             <div class="w-32-pt text-center bg-gray-700 rounded-lg ">
-                <div class="w-4/5 m-ct bg-gray-500 rounded-lg h-80 mt-12"></div>
+                <div class="w-4/5 m-ct bg_16A34A rounded-lg h-80 mt-12"></div>
                 <h2 class="fz-30 mt-4">Crash</h2>
                 <p class="fz-18 regular">Watch the Multipiler go to the infinits</p>
                 <button class="bg_3B82F6 rounded-lg w-5/12 my-12 py-4">Play</button>
