--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -258,13 +258,13 @@
                     <h2 class="text-white fz-72 semibold">Contest</h2>
                     <p class="text-white fz-18 my-4 regular">Who is the invincible victor at the high tables?
                         Let's see how badass you can be.</p>
-                        <div class="bg_676CDB w-1/5 border-b-4"></div>
+                    <div class="bg_676CDB w-1/5 border-b-4"></div>
                     <button class="bg_3B82F6 rounded-lg w-3/12 py-4 my-6 fz-18  semibold">Participate Now</button>
                 </div>
             </div>
         </div>
     </section>
-    <section class="w-full bg-1f2937 py-12">
+    <section class="w-full bg-1f2937 py-24">
         <div class="flex text-white w-4/5 m-ct list-none semibold">
             <li class="pr-10 cl-bt"><a href="#">Daily</a></li>
             <li class="pr-10 cl-bt"><a href="#">Weekly</a></li>
@@ -365,8 +365,10 @@
                     <li><a href="#">Gamble Aware</a></li>
                 </div>
                 <div class="w-46-95-pt list-none">
-                    <li><a href="#" class="flex my-3"><img src="/images/mail.png" alt=""><span>btcgame@gmail.com</span></a></li>
-                    <li><a href="#" class="flex"><img src="/images/information-circle.png" alt=""><span>help.btcgame.com</span></a></li>
+                    <li><a href="#" class="flex my-3"><img src="/images/mail.png" alt=""><span
+                                class="mr-2">btcgame@gmail.com</span></a></li>
+                    <li><a href="#" class="flex"><img src="/images/information-circle.png"
+                                alt=""><span>help.btcgame.com</span></a></li>
                 </div>
             </div>
         </div>
