--- a/tailwind/wallet_page.html
+++ b/tailwind/wallet_page.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Free-bitcoin</title>
+    <link rel=icon type=image/png href="../images/Vector 1.png">
+    <link rel="stylesheet" href="./tailwind.css">
+    <link rel="stylesheet" href="../tailwind/custom.css">
+    <script src="/js/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
-<body>
-    
+
+<body class="h-screen g-b bg-black">
+    <header class="bg-111827 semibold">
+        <nav class="w-4/5 m-ct flex text-white py-12">
+            <div class="w-7/12 flex">
+                <img src="/images/Vector 1.png" alt="">
+                <div class="ml-4 pt-4 fz-18">Free-Bitcoins</div>
+            </div>
+            <div class="w-5/12 text-right">
+                <ul class="flex pt-4 justify-content">
+                    <li class="w-3/12 fz-16"><a href="#">Home Page</a></li>
+                    <li class="w-3/12 fz-16"><a href="#">Game</a></li>
+                    <li class="w-3/12 fz-16"><a href="#">Affiliate</a></li>
+                    <li class="w-3/12 fz-16 ml-4">
+                        <select name="" id="" class="bg-1f2937 rounded-lg px-2">
+                            <option value="1">10.0000121 <span>BTC</span></option>
+                            <option value="2">0.0000121 <span>ETH</span></option>
+                            <option value="3">1.32200121 <span>USD</span></option>
+                        </select>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section class="bg-black">
+        <div class="w-4/5 m-ct flex text-white">
+            <div class="w-15-039 fz-48 semibold">Deposit</div>
+            <div class="w-84-96">
+                <ul class="flex float-right fz-20 semibold py-6">
+                    <li><a href="#">Deposit</a></li>
+                    <li><a href="#" class="pl-4">From AltCoin</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="w-4/5 m-ct flex text-white py-12">
+            <ul class="w-4/12 flex">
+                <li><a href="#" class="pr-2">Deposit Currency</a></li>
+                <li><a href="#" class="pl-2 cl_22C55E">Record</a></li>
+            </ul>
+            <ul class="w-3/12 flex">
+                <li><a href="#" class="pr-2">First Deposit Bonus</a></li>
+                <li><a href="#" class="cl_22C55E pl-2">Record</a></li>
+            </ul>
+            <ul class="w-5/12 mr-left-30px">
+                <li><a href="#">Deposit Address(BTC)</a></li>
+            </ul>
+        </div>
+        </div>
+        <div class="w-4/5 m-ct flex">
+            <div class="w-7/12 flex">
+                <div class="flex w-2/4 bg-1f2937 mr-2 rounded-lg py-6 text-white">
+                    <div class="w-4/12">
+                        <div class="w-12 h-12 rounded-full bg-gray-400 m-ct-bl"></div>
+                    </div>
+                    <div class="w-8/12">
+                        <div>
+                            <div class="fz-20 semibold">BTC</div>
+                            <span class="fz-20 regular">0.0000121 BTC</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-2/4 bg-1f2937 ml-2 rounded-lg fz-20 semibold cl-EAB308 text-center pt-2">60 USD (or
+                    above to
+                    get Bonus)
+                </div>
+            </div>
+            <div class="flex bg-1f2937 rounded-lg w-5/12 mr-left-30px text-white">
+                <div class="w-10/12">
+                    <div class="flex list-none fz-18 medium pt-2">
+                        <li class="mx-4"><a href="#">Legacy</a></li>
+                        <li class="mx-4"><a href="#">Segwit</a></li>
+                    </div>
+                    <div>
+                        <p class="rounded-lg bg_37415 py-4">1KDCkBvuPcmyLWhPmyhb72tyVkHp58DEFq</p>
+
+                    </div>
+                </div>
+                <div class="w-2/12">
+                    <img src="/images/image 16.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
