--- a/tailwind/desktop_3.html
+++ b/tailwind/desktop_3.html
@@ -99,28 +99,31 @@
         <section class="bg-1f2937">
             <div class="w-4/5 m-ct">
                 <h3 class="text-white fz-40 semibold pt-24">USD Rewards</h3>
-                <p class="text-white fz-20 regular w-7/12">Every friend you invite to your MY CASINO will get you 100 USD. Your MY CASINO
+                <p class="text-white fz-20 regular w-7/12">Every friend you invite to your MY CASINO will get you 100
+                    USD. Your MY CASINO
                     members will get you
                     the corresponding USD rewards when they upgrade yo the higher VIP Level</p>
-                    <div class="w-4/5 m-ct py-12">
-                        <canvas id="income" class="m-ct-bl" width="1200" height="600"></canvas>
-                    </div>
+                <div class="w-4/5 m-ct py-12">
+                    <canvas id="income" class="m-ct-bl" width="1200" height="600"></canvas>
+                </div>
             </div>
         </section>
         <section class="bg-111827 py-24">
             <div class="text-white ">
                 <h2 class="text-center semibold fz-50">Commission Rewards</h2>
-                <p class="text-center w-2/5 m-ct">Every friend you invite to your MY CASINO will rebate you a percentage of their wagers as your commission, directly sent to your balance.
+                <p class="text-center w-2/5 m-ct">Every friend you invite to your MY CASINO will rebate you a percentage
+                    of their wagers as your commission, directly sent to your balance.
                 </p>
-                <p class="text-center w-2/5 m-ct">Your MY CASINO members will rebate you a percentage of their wagers as your commission rewards. Please see blow:</p>
+                <p class="text-center w-2/5 m-ct">Your MY CASINO members will rebate you a percentage of their wagers as
+                    your commission rewards. Please see blow:</p>
             </div>
             <div class="w-4/5 m-ct py-12">
                 <canvas id="countries" class="m-ct-bl w-full h_h" width="600" height="400">
                 </canvas>
             </div>
         </section>
-        
-        <section class="bg-1f2937 pb-12">
+
+        <section class="bg-1f2937 pb-32">
             <h3 class="semibold fz-50 text-center text-white py-48">Platform Real-Time Rewards</h3>
             <table class="text-white w-4/5 m-ct fz-20 ">
                 <tr class="text-left fz-26 border-b border-gray-700 medium">
@@ -258,22 +261,22 @@
         // draw pie chart
         new Chart(countries).Doughnut(pieData, pieOptions);
     </script>
-     <script>var barData = {
-        labels: ["1", "2", "3", "4", "5", "6","7", "8", "9", "10", "11", "12","13", "14", "15", "16", "17", "18","19", "20", "21", "22", "23", "24"],
-        datasets: [
-            {
-                fillColor: "#22C55E",
-                strokeColor: "#22C55E",
-                data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
-            }
-        ]
-    }
+    <script>var barData = {
+            labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24"],
+            datasets: [
+                {
+                    fillColor: "#22C55E",
+                    strokeColor: "#22C55E",
+                    data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
+                }
+            ]
+        }
 
-    // get bar chart canvas
-    var income = document.getElementById("income").getContext("2d");
+        // get bar chart canvas
+        var income = document.getElementById("income").getContext("2d");
 
-    // draw bar chart
-    new Chart(income).Bar(barData);</script>
+        // draw bar chart
+        new Chart(income).Bar(barData);</script>
 </body>
 
 </html>
